tests/errors/first_stage/.data/oor/oor.as
; .data argument was out of range for a byte in memory
.data 123456